# llm-lib

./: .envrc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  todo.md
cookbook-copy/: 01-Obtain_dataset.ipynb  02-Visualizing_embeddings_in_2D.ipynb  03-Clustering.ipynb  04-Zero-shot_classification_with_embeddings.ipynb  05-Classification_using_embeddings.ipynb  06-Regression_using_embeddings.ipynb  07-Semantic_text_search_using_embeddings.ipynb  10_Get_embeddings.ipynb  11_How_to_count_tokens_with_tiktoken.ipynb  12_Question_answering_using_embeddings.ipynb
deeplake-samples/: .tmuxp.yaml  Makefile  README.md  deeplake-llamaindex.py  pyproject.toml  rag-quickstart.py
dspy-samples/: Makefile  README.md  language-models.py  metrics.py  prompting-techniques.py  pyproject.toml  signatures.py
dspy-samples/notebooks/: 01-getting-started.ipynb  02-minimal-working.ipynb
faiss-samples/: Makefile  README.md  faiss-building-blocks.py  getting-started.py  pyproject.toml
gorilla-samples/: .tmuxp.yaml  Makefile  README.md  gorilla-functions.py  pyproject.toml
guidance-samples/: Makefile  README.md  basics-gen.py  constrained-gen.py  constrained_gen.py  pyproject.toml  starter-guidance.py  stateful_gen.py
haystack-samples/: Makefile  README.md  chat-app-tools.py  chroma-starter.py  classify-documents.py  embedding-metadata.py  evaluate-pipelines.py  extractive-pipeline.py  get-started.py  haystack-rag.py  haystack-starter.py  hybrid-retrieval-pipeline.py  langdetect-example.py  metadata-filtering.py  preprocess-files.py  pyproject.toml  rag-qa-pipeline.py  serialize-pipelines.py  structured-output.py
haystack-samples/data/: davinci.txt
haystack-samples/recipe_files/: vegan_flan_recipe.md  vegan_sunflower_hemp_cheese_recipe.txt
langchain-samples/: Makefile  README.md  Session.vim  pyproject.toml  quickstart-llama2.py  quickstart-ollama.py  quickstart-openai.py  rag.py  retrieval-chain.py  structured-output.py  tool_agent_use.py
llamaindex-samples/: Makefile  README.md  auto-retrieval-vector-store.py  compose.yaml  deeplake-vector-store.py  docarray-vector-store.py  faiss-vector-store.py  ingestion.py  llamaindex-components.py  pyproject.toml  simple-vector-store.py  starter-openai.py  vector-store-options.py
llamaindex-samples/data/: test1.txt
openai-capabilities/: Makefile  README.md  assistant.py  embeddings.py  pyproject.toml  text_generation.py  tool_call.py
openai-capabilities/data/: chinook.db
openai-examples/: 01-web-qa.ipynb  Makefile  README.md  Session.vim  embedding-long-texts.py  example_lib.py  long-content-extraction.py  open-ai-example.py  openai-example.py  openai-examples-list.csv  print_tags_from_examples.py  process_openai_examples.py  pyproject.toml  test_print_tags_from_examples.py  test_process_openai_examples.py  unit-test-writing.py
openai-examples/redis-examples/: data-structure-store.py
openai-examples/redis-examples/composetest/: Dockerfile  app.py
openai-examples/text/openai.com/: openai.com_about.txt  openai.com_api.txt  openai.com_blog?authors=peter-welinder.txt  openai.com_blog_amplifying-ai-training.txt  openai.com_blog_api-no-waitlist#OpenAI.txt  openai.com_blog_best-practices-for-deploying-language-models.txt  openai.com_blog_chatgpt-plugins.txt  openai.com_blog_chatgpt-plus.txt  openai.com_blog_chatgpt.txt  openai.com_blog_codex-apps#content.txt  openai.com_blog_competitive-self-play.txt  openai.com_blog_critiques.txt  openai.com_blog_customizing-gpt-3#RachelLim.txt  openai.com_blog_dall-e-2-extending-creativity#OpenAI.txt  openai.com_blog_dall-e-2-update.txt  openai.com_blog_dall-e-api-now-available-in-public-beta#content.txt  openai.com_blog_dall-e-introducing-outpainting.txt  openai.com_blog_dall-e-now-available-in-beta#content.txt  openai.com_blog_dall-e-now-available-without-waitlist#OpenAI.txt  openai.com_blog_discovering-the-minutiae-of-backend-systems#content.txt  openai.com_blog_economic-impacts#PamelaMishkin.txt  openai.com_blog_fine-tuning-gpt-2.txt  openai.com_blog_first-retro-contest-retrospective.txt  openai.com_blog_gpt-3-apps#OpenAI.txt  openai.com_blog_gpt-3-edit-insert#HenriquePondé.txt  openai.com_blog_grade-school-math.txt  openai.com_blog_how-should-ai-systems-behave.txt  openai.com_blog_improving-language-model-behavior.txt  openai.com_blog_instruction-following.txt  openai.com_blog_introducing-chatgpt-and-whisper-apis#AttyEleti.txt  openai.com_blog_introducing-text-and-code-embeddings.txt  openai.com_blog_learning-to-summarize-with-human-feedback_#rf1.txt  openai.com_blog_march-20-chatgpt-outage.txt  openai.com_blog_new-ai-classifier-for-indicating-ai-written-text#JanLeike.txt  openai.com_blog_new-and-improved-content-moderation-tooling#ChongZhang.txt  openai.com_blog_new-and-improved-embedding-model#TedSanders.txt  openai.com_blog_openai-and-microsoft-extend-partnership.txt  openai.com_blog_openai-api#GregBrockman.txt  openai.com_blog_openai-baselines-ppo.txt  openai.com_blog_openai-codex#GregBrockman.txt  (+126 more)
openai-prompts/: Makefile  README.md  example_lib.py  openai-prompts.py  pyproject.toml
openai-quickstart-python/: Makefile  README.md  people.csv  pyproject.toml
openai-quickstart-python/examples/assistant-flask/: app.py
openai-quickstart-python/examples/chat-basic/: app.py
openai-website-qa/: Makefile  README.md  answer_question.py  process_text.py  pyproject.toml  web_crawler.py
phidata-samples/: .tmuxp.yaml  Makefile  README.md  auto-assistant.py  compose.yaml  finance-assistant.py  pdf-assistant.py  pyproject.toml  rag-assistant.py  research.py  web-search.py
redis-examples/: Makefile  README.md  Session.vim  document-database.py  pyproject.toml  redis-vector-lib-samples.py  redis_util.py  vector-database.py  vector-hybrid-search1.py  vector-hybrid-search2.py  vector-hybrid-search3.py  vector-search-context.py  vector-search-existing.py  vector-search-hybrid.py  vector-search.py
redis-examples/composetest/: app.py
redis-examples/schemas/: schema.yaml
