[tool.poetry]
name = "dspy-samples"
version = "0.1.0"
description = ""
authors = ["Gavin Noronha <gavinln@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
dspy-ai = "^2.4.13"
jupyterlab = "^4.2.4"
openai = "^1.40.8"
ipywidgets = "^8.1.3"
black = {extras = ["jupyter"], version = "^24.8.0"}
fire = "^0.6.0"
jupytext = "^1.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
