[tool.poetry]
name = "langchain-samples"
version = "0.1.0"
description = ""
authors = ["Gavin Noronha <gavinln@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.14"
beautifulsoup4 = "^4.12.3"
faiss-cpu = "^1.8.0.post1"
fake-useragent = "^1.5.1"
langchain-openai = "^0.1.22"
langchain-community = "^0.2.12"
joblib = "^1.4.2"
fire = "^0.6.0"
langchain-chroma = "^0.1.2"
wikipedia = "^1.4.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
ipython = "^8.26.0"
black = "^24.8.0"
vulture = "^2.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
