[tool.poetry]
name = "llamaindex-samples"
version = "0.1.0"
description = ""
authors = ["Gavin Noronha <gavinln@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.24.0"
llama-index = "^0.10.38"
llama-index-embeddings-ollama = "^0.1.2"
llama-index-llms-ollama = "^0.1.5"
fire = "^0.6.0"
redis = "^5.0.4"
llama-index-vector-stores-redis = "^0.2.0"
scikit-learn = "^1.5.0"
llama-index-readers-wikipedia = "^0.1.4"
wikipedia = "^1.4.0"
llama-index-vector-stores-faiss = "^0.1.2"
faiss-cpu = "^1.8.0"
llama-index-vector-stores-docarray = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
