[tool.poetry]
name = "openai-capabilities"
version = "0.1.0"
description = ""
authors = ["Gavin Noronha <gavinln@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.6.0"
pandas = "^2.2.1"
ipython = "^8.23.0"
openai = "^1.16.1"
scipy = "^1.13.0"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.4"
monkeytype = "^23.3.0"
tiktoken = "^0.6.0"
tenacity = "^8.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
