[tool.poetry]
name = "openai-examples"
version = "0.1.0"
description = ""
authors = ["Gavin Noronha <gavinln@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.24.0"
pandas = "^2.2.2"
pytest = "^8.2.0"
fire = "^0.6.0"
openai = "^1.25.1"
tenacity = "^8.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
