[tool.poetry]
name = "openai-website-qa"
version = "0.1.0"
description = ""
authors = ["Gavin Noronha <gavinln@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.22.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.1"
tiktoken = "^0.6.0"
openai = "^1.16.0"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
