[tool.poetry]
name = "redis-examples"
version = "0.1.0"
description = ""
authors = ["Gavin Noronha <gavinln@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.24.0"
pandas = "^2.2.2"
pytest = "^8.2.0"
fire = "^0.6.0"
redis = "^5.0.4"
flask = "^3.0.3"
sentence-transformers = "^2.7.0"
pyarrow = "^16.0.0"
openai = "^1.28.1"
redisvl = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
